add_subdirectory( composite )
add_subdirectory( multiop-plugin )
add_subdirectory( page0 )
add_subdirectory( page1 )
add_subdirectory( page2 )
add_subdirectory( preprocess )
add_subdirectory( surface )
add_subdirectory( test0 )
add_subdirectory( test-vector )
add_subdirectory( vector-time )
add_subdirectory( volume )
add_subdirectory( volume-shader )

if( crunchstore_FOUND )
    add_subdirectory( persist )
endif()

if( VTK_FOUND )
    add_subdirectory( test-vtk-vector )
    add_subdirectory( test-time-vtk-points )
    add_subdirectory( vtk-surface )
endif()
