add_subdirectory( hierarchyutils )
add_subdirectory( multiop-plugin )
add_subdirectory( page-volume )
add_subdirectory( page-volume-rt )
add_subdirectory( surface )
add_subdirectory( test0 )
add_subdirectory( vector-time )
add_subdirectory( volume )
add_subdirectory( volume-rt )

if( VTK_FOUND )
    add_subdirectory( test-vtk-vector )
    add_subdirectory( test-time-vtk-points )
    add_subdirectory( vtk-surface )
endif()

